Show a more descriptive message when vendor.img is out of date
Change-Id: Ib173003752b670a5cae50225bb6cc43cbe0c793c
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Joe Maples <joe@frap129.org>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/core/res/res/values/awaken_symbols.xml
+++ b/core/res/res/values/awaken_symbols.xml
@@ -135,4 +135,7 @@
   <!-- Hide FOD while Going to sleep from lockscreen to avoid HBM flicker -->
   <java-symbol type="bool" name="config_inDisplayFingerprintFlickersGoingToSleep" />
 
+  <!-- Vendor mismatch fingerprint warning -->
+  <java-symbol type="string" name="system_error_vendorprint" />
+
 </resources>
