--- a/core/res/res/values/awaken_symbols.xml
+++ b/core/res/res/values/awaken_symbols.xml
@@ -144,4 +144,10 @@
   <!-- Whether to use old mobile type icons as default -->
   <java-symbol type="bool" name="config_useOldMobileIcons" />
 
+   <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+   <java-symbol type="string" name="config_oemFastChargerStatusPath" />
+
+   <!-- Expected value from fast charging status file -->
+   <java-symbol type="string" name="config_oemFastChargerStatusValue" />
+
 </resources>
