base: Run LockscreenFragment external
Change-Id: I960777abdc1cfc74133847245cdb035305ab0a65
Signed-off-by: DennySPB <dennyspb@gmail.com>
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/packages/SystemUI/res/values/awaken_styles.xml
+++ b/packages/SystemUI/res/values/awaken_styles.xml
@@ -41,4 +41,9 @@
         <item name="android:fontFamily">@*android:string/config_headlineFontFamilyMedium</item>
     </style>
 
+    <!-- Pure Tuner Theme-->
+    <style name="ExTunerSettings" parent="@android:style/Theme.DeviceDefault.Settings">
+        <item name="preferenceTheme">@style/TunerPreferenceTheme</item>
+    </style>
+
 </resources>
