base: tuner: add a hide config to left and right shortcut
change the current none to be a hide shortcut
and add a new default to use instead

Change-Id: I6fdfa68a4b083df0ae6583000862dc7bb07a75c7
Signed-off-by: DennySPB <dennyspb@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/packages/SystemUI/res/values/awaken_strings.xml
+++ b/packages/SystemUI/res/values/awaken_strings.xml
@@ -243,4 +243,7 @@
     <!-- Ambient Music Ticker -->
     <string name="ambientmusic_songinfo" formatted="false">%s by %s</string>
 
+    <string name="lockscreen_default">Default</string>
+    <string name="lockscreen_hidden">None</string>
+
 </resources>
