SystemUI: Update keyguard indication margin when fod is in use
Decrease the bottom margin when fingerprint in display is active
to avoid obstructing the view

Change-Id: I3f84384b0ea6369d7ba2f16f53c415f5285decea
Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/packages/SystemUI/res/values/awaken_dimens.xml
+++ b/packages/SystemUI/res/values/awaken_dimens.xml
@@ -55,7 +55,7 @@
     <dimen name="opa_rest_to_collapse">7.0dip</dimen>
 
     <!-- Bottom margin size when fingerprint in display is active -->
-    <dimen name="keyguard_indication_margin_bottom_fingerprint_in_display">30dp</dimen>
+    <dimen name="keyguard_indication_margin_bottom_fingerprint_in_display">@dimen/keyguard_indication_margin_bottom</dimen>
 
     <!-- Recognizing fingerprint animation -->
     <dimen name="fod_animation_size">280dp</dimen>
