base: Allow to use old style icons as default [1/2]
* Some devices don't have much statusbar space due to a big notch.
  Let's add a bool for them to set the old style icons as default.
  Users can later disable it if they want.

@neobuddy89: Code optimization.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/core/res/res/values/awaken_config.xml
+++ b/core/res/res/values/awaken_config.xml
@@ -154,4 +154,7 @@
     <!-- Whether or not we should show vendor mismatch message -->
     <bool name="config_show_vendor_mismatch_message">true</bool>
 
+    <!-- Whether to use old mobile type icons as default -->
+    <bool name="config_useOldMobileIcons">false</bool>
+
 </resources>
