--- a/core/res/res/values/awaken_symbols.xml
+++ b/core/res/res/values/awaken_symbols.xml
@@ -141,4 +141,7 @@
   <!-- Whether or not we should show vendor mismatch message -->
   <java-symbol type="bool" name="config_show_vendor_mismatch_message" />
 
+  <!-- Whether to use old mobile type icons as default -->
+  <java-symbol type="bool" name="config_useOldMobileIcons" />
+
 </resources>
