--- a/packages/SystemUI/res/values/awaken_dimens.xml
+++ b/packages/SystemUI/res/values/awaken_dimens.xml
@@ -56,6 +56,7 @@
 
     <!-- Bottom margin size when fingerprint in display is active -->
     <dimen name="keyguard_indication_margin_bottom_fingerprint_in_display">@dimen/keyguard_indication_margin_bottom</dimen>
+    <dimen name="keyguard_security_fod_view_margin">140dp</dimen>
 
     <!-- Recognizing fingerprint animation -->
     <dimen name="fod_animation_size">280dp</dimen>
