Make "Hide fod while going to sleep" configurable
https://github.com/ArrowOS/android_frameworks_base/blob/f91230dd1af92ac7455ab9a80e1a3aa4bdbc734b/packages/SystemUI/src/com/android/systemui/biometrics/FODCircleView.java#L155 fixes High brightness flicker while going to sleep from lockscreen on raphael BUT it causes the FOD icon to glitch out while on AOD on davinci. Hence make this configurable via an overlay to restore proper behaviour for both device's FOD impl.

test:
On raphael (prebuilt OEM vendor|kernel):
set the overlay to true on raphael, set FOD, lock screen and press power button and notice that brightness doesn't jump to 100% while turning the screen off

On davinci (OSS vendor|kernel):
by default the overlay is set to false, set FOD on davinci, enable AOD and try to lock the phone with aod, unlock without fingerprint (power button), lock again and FOD icon will not glitch out like before

Change-Id: I84ce84b8d235de9b8407683900a23f9b404ee8a9
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/core/res/res/values/awaken_config.xml
+++ b/core/res/res/values/awaken_config.xml
@@ -148,4 +148,7 @@
     <!-- Whether key handler sends intent when changing slider position -->
     <string name="config_alertSliderIntent"></string>
 
+    <!-- Hide FOD while Going to sleep from lockscreen to avoid HBM flicker -->
+    <bool name="config_inDisplayFingerprintFlickersGoingToSleep">false</bool>
+
 </resources>
