--- a/core/res/res/values/awaken_symbols.xml
+++ b/core/res/res/values/awaken_symbols.xml
@@ -132,4 +132,7 @@
   <!-- Whether key handler sends intent when changing slider position -->
   <java-symbol type="string" name="config_alertSliderIntent" />
 
+  <!-- Hide FOD while Going to sleep from lockscreen to avoid HBM flicker -->
+  <java-symbol type="bool" name="config_inDisplayFingerprintFlickersGoingToSleep" />
+
 </resources>
