BatteryService: add Turbo power charging support
Inspired by oneplus dash charging commit

https://github.com/AOSPA/android_frameworks_base/commit/0af31949c69f7c306b49ecf2c25579300973fdc9

Charlie-117: Port to R

Signed-off-by: Charlie-117 <gmoto1179@gmail.com>
Change-Id: I12784d37062753a306af9fd9c9d5cbba0cc578ea
Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/core/res/res/values/awaken_config.xml
+++ b/core/res/res/values/awaken_config.xml
@@ -163,4 +163,7 @@
     <!-- Expected value from fast charging status file  -->
     <string name="config_oemFastChargerStatusValue" translatable="false"></string>
 
+    <!-- Whether device has turbo power charging support -->
+    <bool name="config_hasTurboPowerCharger">false</bool>
+
 </resources>
