--- a/packages/SystemUI/res/layout/quick_qs_status_icons.xml
+++ b/packages/SystemUI/res/layout/quick_qs_status_icons.xml
@@ -69,12 +69,10 @@
         android:layout_weight="1"
         android:gravity="center_vertical|center_horizontal" />
 
-    <com.android.systemui.BatteryMeterView
-        android:id="@+id/batteryRemainingIcon"
-        android:layout_height="match_parent"
+    <com.android.systemui.statusbar.phone.StatusIconContainer
+        android:id="@+id/statusIcons"
         android:layout_width="wrap_content"
-        systemui:textAppearance="@style/TextAppearance.QS.Battery"
-        systemui:showDark="false"
-        android:paddingEnd="2dp" />
+        android:layout_height="match_parent"
+        android:paddingEnd="2dp"/>
 
 </LinearLayout>
