--- a/packages/SystemUI/res/layout/qs_panel.xml
+++ b/packages/SystemUI/res/layout/qs_panel.xml
@@ -83,14 +83,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:elevation="4dp"
-        android:paddingBottom="6dp">
+        android:paddingTop="16dp"
+        android:paddingBottom="5dp">
         <View
-            android:layout_width="40dp"
-            android:layout_height="4dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp"
+            android:layout_width="48dp"
+            android:layout_height="2dp"
             android:background="@drawable/qs_footer_drag_handle" />
     </FrameLayout>
-
 
 </com.android.systemui.qs.QSContainerImpl>
